--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -15,6 +15,13 @@
 #inputContainer{
     width:100%;
 }
-/* #infoWells{
-    display: none;
-} */
+
+#svg{
+    padding-top: 1%;
+    padding-left: 5%;
+    width: 15%;
+    height: 15%;
+}
+
+#wellCheckBox{
+}
