--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,6 +4,8 @@
   </h1>
 </div>
 
+<!-- <button [@visibilityChanged]="isVisible">button</button> -->
+
 <div id="pnlInfo" class="col-sm-8 col-sm-offset-2 panel panel-defualt">
   <div id="pnlHeaders" class="panel-heading" *ngFor="let panel of panels; let i=index;" (mouseover)="panelMouseOver(i)" (mouseout)="panelMouseOut(i)">
     <md-input-container id="inputContainer">
