--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -15,6 +15,8 @@
 #inputContainer{
     width:100%;
 }
-/* #infoWells{
-    display: none;
-} */
+#omg{
+    width: 600px;
+    height: 1000px;
+    background-color: green;
+}
