--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,11 +3,11 @@
 </h1>
 
 <div id="pnlInfo" class="col-sm-8 col-sm-offset-2 panel panel-defualt">
-  <div id="pnlHeaders" class="panel-heading" *ngFor="let panel of panels; let i=index;">
-    <md-input-container id="inputContainer" (mouseover)="panelMouseOver(i)" (mouseout)="panelMouseOut()">
+  <div id="pnlHeaders" class="panel-heading" *ngFor="let panel of panels; let i=index;" (mouseover)="wellOpenClose()" (mouseout)="wellOpenClose()">
+    <md-input-container id="inputContainer" >
       <textarea id="pnlTextAreas" mdInput placeholder="{{panel.name}}" type="text" class="form-control" rows="8" [(ngModel)]="panel.pnlTextArea"
         (keyup)="getText($event, i)"></textarea>
     </md-input-container>
-      <div id="infoWells{{i}}" class="well">{{panel.info}}</div>
+      <div id="infoWells{{i}}" class="well" [@wellIn]='wellState'>{{panel.info}}</div>
   </div>
 </div>
